<resources>
    <string name="app_name">Cyanide</string>
    <string name="play_title">Play Now</string>
    <string name="lower">LOWER</string>
    <string name="higher">HIGHER</string>
    <string name="TextView">NUMBER</string>
    <string name="score">Score 0</string>
    <string name="title_activity_play_re">PlayRE</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button1">PLAY NOW</string>
    <string name="button2">GAME RULES</string>
    <string name="button3">EXIT</string>



</resources>